--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -62,60 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ranked by Distance\n",
-      "['Ross 154', 9.4]\n",
-      "['Sirius A', 8.6]\n",
-      "['Sirius B', 8.6]\n",
-      "['Luyten 726-8 A', 8.4]\n",
-      "['Luyten 726-8 B', 8.4]\n",
-      "['BD +36 degrees 2147', 8.2]\n",
-      "['Wolf 359', 7.7]\n",
-      "[\"Barnard's Star\", 6.0]\n",
-      "['Alpha Centauri A', 4.3]\n",
-      "['Alpha Centauri B', 4.3]\n",
-      "['Alpha Centauri C', 4.2]\n",
-      "\n",
-      "\n",
-      "Ranked by Apparent Brightness\n",
-      "['Sirius A', 1.0]\n",
-      "['Alpha Centauri A', 0.26]\n",
-      "['Alpha Centauri B', 0.077]\n",
-      "['Sirius B', 0.001]\n",
-      "['BD +36 degrees 2147', 0.0003]\n",
-      "[\"Barnard's Star\", 4e-05]\n",
-      "['Ross 154', 2e-05]\n",
-      "['Alpha Centauri C', 1e-05]\n",
-      "['Luyten 726-8 A', 3e-06]\n",
-      "['Luyten 726-8 B', 2e-06]\n",
-      "['Wolf 359', 1e-06]\n",
-      "\n",
-      "\n",
-      "Ranked by Absolute Brightness\n",
-      "['Sirius A', 23.6]\n",
-      "['Alpha Centauri A', 1.56]\n",
-      "['Alpha Centauri B', 0.45]\n",
-      "['BD +36 degrees 2147', 0.006]\n",
-      "['Sirius B', 0.003]\n",
-      "[\"Barnard's Star\", 0.0005]\n",
-      "['Ross 154', 0.0005]\n",
-      "['Alpha Centauri C', 6e-05]\n",
-      "['Luyten 726-8 A', 6e-05]\n",
-      "['Luyten 726-8 B', 4e-05]\n",
-      "['Wolf 359', 2e-05]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "\n",
@@ -196,18 +147,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-3-6792528fc29c>, line 60)",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: __main__.py [-h] [-t T] [-tol TOL]\n",
+      "__main__.py: error: unrecognized arguments: -f C:\\Users\\IanCone\\AppData\\Roaming\\jupyter\\runtime\\kernel-3fad0676-7074-403f-9e64-275b0f664733.json\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-6792528fc29c>\"\u001b[0;36m, line \u001b[0;32m60\u001b[0m\n\u001b[0;31m    gamma(t) = total,last_total\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To exit: use 'exit', 'quit', or Ctrl-D.\n"
      ]
     }
    ],
@@ -237,10 +204,8 @@
     "from math import *\n",
     "import numpy\n",
     "import pdb\n",
-    "total = 0\n",
-    "last_total = 0\n",
-    "dx = .1\n",
-    "frac = ''\n",
+    "\n",
+    "steps = 100\n",
     "\n",
     "def h(x,t):\n",
     "    return (x**(t-1))*(e**(-x))\n",
@@ -256,25 +221,51 @@
     "        if type(t) == int:\n",
     "            return factorial(t-1)\n",
     "        if type(t) == float:\n",
-    "            global frac\n",
-    "            frac = 'yes'\n",
+    "            steps = 100\n",
+    "            dx = 1.\n",
     "            total = 0\n",
-    "            for x in numpy.linspace (0, 1000, 10001):\n",
-    "                total += (dx/6)*(h(x,t) +h(x+dx,t) +4*h((2*x+dx)/2,t))\n",
-    "                if x == 900:\n",
-    "                    last_total = total\n",
-    "            return float(total), last_total\n",
+    "            last_total = 0\n",
+    "            fractional_diff = 1000\n",
+    "            #pdb.set_trace()\n",
+    "            while fractional_diff > tol:\n",
+    "                last_total = total\n",
+    "                total = 0\n",
+    "                for x in numpy.linspace (0.0000000001, 100, steps+1):\n",
+    "                    total += (dx/6)*(h(x,t) +h(x+dx,t) +4*h((2*x+dx)/2,t))\n",
+    "                fractional_diff = abs(total-last_total)/total\n",
+    "                steps *=2\n",
+    "                dx /=2\n",
+    "            return float(total), last_total, fractional_diff\n",
     "    else:\n",
     "        return 'Please enter a value between 1 and 100.'\n",
     "    \n",
+    "\n",
+    "\n",
+    "    \n",
     "if __name__ ==\"__main__\":\n",
-    "    t = (7./2)\n",
+    "    frac = ''\n",
+    "    fractional_diff = 0\n",
+    "    total = 0\n",
+    "    last_total = 0\n",
+    "    import argparse\n",
     "    import doctest\n",
-    "    doctest.testmod() \n",
-    "    gamma(t) = total,last_total\n",
-    "    print 'Gamma of',t,'is:',total\n",
-    "    if frac == 'yes':\n",
-    "        print 'frac_diff =', frac_diff\n",
+    "    #doctest.testmod()\n",
+    "    \n",
+    "    parser = argparse.ArgumentParser()\n",
+    "    parser.add_argument('-t', type = float)\n",
+    "    parser.add_argument('-tol', type = float)\n",
+    "    args = parser.parse_args()\n",
+    "    t = args.t\n",
+    "    tol = args.tol\n",
+    "    \n",
+    "    \n",
+    "    if type(t) == int:\n",
+    "        fact = gamma(t)\n",
+    "        print 'Gamma of',t,'is:',fact\n",
+    "    if type(t) == float:\n",
+    "        total, last_total, fractional_diff = gamma(t)\n",
+    "        print 'Gamma of',t,'is:',total\n",
+    "        print 'frac_diff =', \"{:0.7f}\".format(fractional_diff*100),\"%\"\n",
     "\n"
    ]
   },
