--- a/python_built-in_functions.ipynb
+++ b/python_built-in_functions.ipynb
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -775,13 +775,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['i', 's', '', 'i', 't', '', 't', 'o', 'o', '', 'l', 'a', 't', 'e', '', 't', 'o', '', 'r', 'e', 'v', 'e', 'r', 's', 'e', '', 'm', 'a', 'j', 'o', 'r', 's']\n"
+      "'i'\n",
+      "'s'\n",
+      "''\n",
+      "'i'\n",
+      "'t'\n",
+      "''\n",
+      "'t'\n",
+      "'o'\n",
+      "'o'\n",
+      "''\n",
+      "'l'\n",
+      "'a'\n",
+      "'t'\n",
+      "'e'\n",
+      "''\n",
+      "'t'\n",
+      "'o'\n",
+      "''\n",
+      "'r'\n",
+      "'e'\n",
+      "'v'\n",
+      "'e'\n",
+      "'r'\n",
+      "'s'\n",
+      "'e'\n",
+      "''\n",
+      "'m'\n",
+      "'a'\n",
+      "'j'\n",
+      "'o'\n",
+      "'r'\n",
+      "'s'\n"
      ]
     }
    ],
    "source": [
-    "print list(reversed(['s','r','o','j','a','m','','e','s','r','e','v','e','r','','o','t','','e','t','a','l',\\\n",
-    "                       '','o','o','t','','t','i','','s','i']))\n"
+    "import pprint\n",
+    "a= list(reversed(['s','r','o','j','a','m','','e','s','r','e','v','e','r','','o','t','','e','t','a','l',\\\n",
+    "                       '','o','o','t','','t','i','','s','i']))\n",
+    "for i in a:\n",
+    "    pprint.pprint(i)\n"
    ]
   },
   {
@@ -925,6 +959,13 @@
     "realquick = 10 \n",
     "for i in xrange(0,100,realquick):\n",
     "    print 'why'"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "zip()"
    ]
   },
   {
