--- a/PhysPy-wk5_2015S.ipynb
+++ b/PhysPy-wk5_2015S.ipynb
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -849,12 +849,25 @@
      "output_type": "stream",
      "text": [
       "I liek turtles. My names is timmy\n",
-      "I am 550 pounds\n",
-      "I am 610 pounds\n",
-      "I am 670 pounds\n",
-      "I am 730 pounds\n",
-      "I am 365.0 pounds\n",
-      "I am 328.5 pounds\n"
+      "I am 250.0 pounds\n",
+      "Now I am 250.0 pounds\n",
+      "I am 125.0 pounds\n",
+      "Now I am 125.0 pounds\n",
+      "I am 62.5 pounds\n",
+      "Now I am 62.5 pounds\n",
+      "I am 31.25 pounds\n",
+      "Now I am 31.25 pounds\n",
+      "I am 15.625 pounds\n",
+      "Now I am 15.625 pounds\n",
+      "I am 7.8125 pounds\n",
+      "Now I am 7.8125 pounds\n",
+      "I am 3.90625 pounds\n",
+      "Now I am 3.90625 pounds\n",
+      "I am 1.953125 pounds\n",
+      "Now I am 1.953125 pounds\n",
+      "I am 0.9765625 pounds\n",
+      "Now I am 0.9765625 pounds\n",
+      "I am 0.87890625 pounds\n"
      ]
     }
    ],
@@ -877,11 +890,10 @@
     "        print 'I am', self.weight, 'pounds'\n",
     "        \n",
     "timmy = Turtle('timmy', 500)\n",
-    "timmy.eat(50)\n",
-    "timmy.eat(60)\n",
-    "timmy.eat(60)\n",
-    "timmy.eat(60)\n",
-    "timmy.dump()\n",
+    "\n",
+    "while timmy.weight > 1:\n",
+    "    timmy.dump()\n",
+    "    print 'Now I am', timmy.weight, 'pounds'\n",
     "timmy.hibernate()\n"
    ]
   },
