--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -19,8 +19,32 @@
     "numbers in between are printed\n",
     "\n",
     "'''\n",
+    "import numpy as np\n",
+    "prime_list = []\n",
+    "divis_by = 0\n",
     "\n",
     "def find_primes(a,b):\n",
+    "    while a <= b:\n",
+    "        for i in np.arange(0,a+1):\n",
+    "            for b in np.arange(1,a+1):\n",
+    "                if a % b == 0:\n",
+    "                    divis_by += 1\n",
+    "                prime_list.append(a)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "#if __name__ == \"__main__\":\n",
+    "    #import doctest\n",
+    "    #import argparse\n",
+    "    \n",
+    "    \n",
+    "    #parser = argparse.ArgumentParser()\n",
+    "    #parser.add_argument('a', type = int)\n",
+    "    #parser.add_argument('b', type = int)\n",
+    "    #args = parser.parse_args()\n",
+    "    #a = args.a\n",
+    "    #b = args.b\n",
     "    "
    ]
   },
