--- a/python_built-in_functions.ipynb
+++ b/python_built-in_functions.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -294,16 +294,16 @@
     {
      "data": {
       "text/plain": [
-       "[(1, 'Four'), (2, 'Mother'), (3, 'Fucking'), (4, 'Parts')]"
+       "[(1, 'Four'), (2, 'Mother'), (3, 'Ducking'), (4, 'Parts')]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seasons = ['Four', 'Mother', 'Fucking', 'Parts']\n",
+    "seasons = ['Four', 'Mother', 'Ducking', 'Parts']\n",
     "list(enumerate(seasons, start=1))"
    ]
   },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -479,13 +479,13 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj = 'this is bitchwork'\n",
+    "obj = 'this is boring'\n",
     "isinstance(obj, str)"
    ]
   },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -506,62 +506,16 @@
     {
      "data": {
       "text/plain": [
-       "['I',\n",
-       " 'm',\n",
-       " ' ',\n",
-       " 'n',\n",
-       " 'o',\n",
-       " 't',\n",
-       " ' ',\n",
-       " 's',\n",
-       " 'p',\n",
-       " 'e',\n",
-       " 'n',\n",
-       " 'd',\n",
-       " 'i',\n",
-       " 'n',\n",
-       " 'g',\n",
-       " ' ',\n",
-       " '$',\n",
-       " '3',\n",
-       " '0',\n",
-       " ',',\n",
-       " '0',\n",
-       " '0',\n",
-       " '0',\n",
-       " ' ',\n",
-       " 'a',\n",
-       " ' ',\n",
-       " 'y',\n",
-       " 'e',\n",
-       " 'a',\n",
-       " 'r',\n",
-       " ' ',\n",
-       " 't',\n",
-       " 'o',\n",
-       " ' ',\n",
-       " 'w',\n",
-       " 'a',\n",
-       " 's',\n",
-       " 't',\n",
-       " 'e',\n",
-       " ' ',\n",
-       " 'm',\n",
-       " 'y',\n",
-       " ' ',\n",
-       " 't',\n",
-       " 'i',\n",
-       " 'm',\n",
-       " 'e']"
+       "['w', 'o', 'a', 'h']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list('Im not spending $30,000 a year to waste my time' )"
+    "list('woah' )"
    ]
   },
   {
@@ -602,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -610,33 +564,16 @@
     {
      "data": {
       "text/plain": [
-       "[['I'],\n",
-       " [],\n",
-       " ['t'],\n",
-       " ['o'],\n",
-       " ['o'],\n",
-       " ['k'],\n",
-       " [],\n",
-       " ['C'],\n",
-       " ['S'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " [],\n",
-       " ['j'],\n",
-       " ['e'],\n",
-       " ['s'],\n",
-       " ['u'],\n",
-       " ['s']]"
+       "[['I'], [], ['t'], ['o'], ['o'], ['k'], [], ['C'], ['S'], ['1'], ['1'], ['0']]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "map(list, reversed(['s', 'u', 's', 'e', 'j','', '0','1','1','S','C', '', 'k','o','o','t', '','I' ]) )"
+    "map(list, reversed(['0','1','1','S','C', '', 'k','o','o','t', '','I' ]) )"
    ]
   },
   {
@@ -678,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -689,14 +626,14 @@
        "1"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "min(1, 'Its a beautiful day out\\\n",
-    "and here I am sitting inside on my fucking laptop')"
+    "and here I am sitting inside on my laptop')"
    ]
   },
   {
@@ -856,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -865,12 +802,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I give 0 fucks\n"
+      "I give 0 ducks\n"
      ]
     }
    ],
    "source": [
-    "print 'I give', sum([-5,-4,-3,-2,0,2,3,4,5],0), 'fucks'"
+    "print 'I give', sum([-5,-4,-3,-2,0,2,3,4,5],0), 'ducks'"
    ]
   },
   {
@@ -882,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -890,38 +827,16 @@
     {
      "data": {
       "text/plain": [
-       "('I',\n",
-       " 't',\n",
-       " 's',\n",
-       " ' ',\n",
-       " 'p',\n",
-       " 'r',\n",
-       " 'o',\n",
-       " 'n',\n",
-       " 'o',\n",
-       " 'u',\n",
-       " 'n',\n",
-       " 'c',\n",
-       " 'e',\n",
-       " 'd',\n",
-       " ' ',\n",
-       " 't',\n",
-       " 'u',\n",
-       " 'h',\n",
-       " '-',\n",
-       " 'p',\n",
-       " 'u',\n",
-       " 'l',\n",
-       " 'l')"
+       "('t', 'u', 'h', '-', 'p', 'u', 'l', 'l')"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tuple('Its pronounced tuh-pull')"
+    "tuple('tuh-pull')"
    ]
   },
   {
@@ -970,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
