--- a/PhysPy-wk5_2015S.ipynb
+++ b/PhysPy-wk5_2015S.ipynb
@@ -956,11 +956,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h(t = 2; v0 = 10) = 0.38\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "class Y:\n",
     "    def __init__(self, v0, g = 9.81):   \n",
@@ -979,16 +988,26 @@
     "t = 2.\n",
     "h = y.value(t)\n",
     "print 'h(t = {:g}; v0 = {:g}) = {:g}'.format(t, y.v0, h)\n",
-    "print callable(y)\n"
+    "print callable(y) # can you do y(t)? instead of y.value(t)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h(t = 2; v0 = 10) = 0.38\n",
+      "<type 'instance'>\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "class Y:\n",
     "    def __init__(self, v0, g = 9.81):   \n",
@@ -1017,11 +1036,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.38\n",
+      "0.38\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "When you do h = y(t), you are implicitly invoking the method __call__;\n",
@@ -1049,11 +1077,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h(t = 2; v0 = 10) = 0.38\n",
+      "<type 'instance'>\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "'''Using functions and classes together'''\n",
     "\n",
@@ -1104,11 +1142,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.01899999128375"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "diff = lambda f, x, h = 1e-10:(f(x+h) - f(x-h))/(2*h)\n",
     "\n",
@@ -1117,11 +1166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.01899999128375"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Since we defined the method __call__, it can be done with better visual:\n",
     "diff = lambda f, x, h = 1e-10:(f(x+h) - f(x-h))/(2*h)\n",
@@ -1149,11 +1209,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h = v0*t - 0.5*g*t**2; parameters: v0 = 10, g = 9.81 (constant).\n",
+      "h = v0*t - 0.5*g*t**2; parameters: v0 = 10, g = 9.81 (constant).\n"
+     ]
+    }
+   ],
    "source": [
     "''' \n",
     "One more special method: __str__\n",
