--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
      "output_type": "stream",
      "text": [
       "A M whale named Splash is born\n",
-      "A whale named Splash g\n",
+      "A whale named Splash s\n",
       "00:00:00\n"
      ]
     },
@@ -82,7 +82,7 @@
        "'\\x07 \\x07 \\x07 \\x07 \\x07'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
