--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -11,21 +11,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flight \t Destination \t Gate \t Time\n",
-      "----------------------------------------\n",
-      "Aeroflot 34 \t Moscow \t 5 \t 9\n",
-      "American 1 \t New York City \t 12 \t 11.3\n",
-      "Southwest 23 \t Santa Barbara \t 6 \t 12.5\n",
-      "Southwest 59 \t Los Angeles \t 11 \t 14.5\n",
-      "Southwest 145 \t Washington, D.C. \t 1 \t 6\n",
-      "Southwest 146 \t Chicago-Midway \t 1 \t 9.6\n",
-      "SpamAir 1 \t Austin, Minnesota \t 42 \t 14.4\n",
-      "USAirways 8 \t Miami \t 20 \t 13.1\n",
-      "United 2 \t Los Angeles \t 10 \t 12.5\n",
-      "United 31 \t Dulles \t 1 \t 7.1\n",
-      "United 46 \t Los Angeles \t 5 \t 6.5\n",
-      "United 302 \t London-Heathrow \t 5 \t 6.5\n",
-      "United 2032 \t Miami \t 21 \t 15.1\n"
+      "Flight \t  \t Destination \t  \t Gate \t  \t Time\n",
+      "---------------------------------------------------------------\n",
+      "Aeroflot 34 \t Moscow  \t  \t 5 \t  \t 9\n",
+      "American 1 \t New York City  \t  \t 12 \t  \t 11.3\n",
+      "Southwest 23 \t Santa Barbara  \t  \t 6 \t  \t 12.5\n",
+      "Southwest 59 \t Los Angeles  \t  \t 11 \t  \t 14.5\n",
+      "Southwest 145 \t Washington, D.C.  \t  \t 1 \t  \t 6\n",
+      "Southwest 146 \t Chicago-Midway  \t  \t 1 \t  \t 9.6\n",
+      "SpamAir 1 \t Austin, Minnesota  \t  \t 42 \t  \t 14.4\n",
+      "USAirways 8 \t Miami  \t  \t 20 \t  \t 13.1\n",
+      "United 2 \t Los Angeles  \t  \t 10 \t  \t 12.5\n",
+      "United 31 \t Dulles  \t  \t 1 \t  \t 7.1\n",
+      "United 46 \t Los Angeles  \t  \t 5 \t  \t 6.5\n",
+      "United 302 \t London-Heathrow  \t  \t 5 \t  \t 6.5\n",
+      "United 2032 \t Miami  \t  \t 21 \t  \t 15.1\n"
      ]
     }
    ],
@@ -46,10 +46,10 @@
     "           (\"United\",2032,\"MIA\",21,15.1),(\"SpamAir\",1,\"AUM\",42,14.4)]\n",
     "\n",
     "def schedule(airport_dict,flight_list):\n",
-    "    print 'Flight \\t Destination \\t Gate \\t Time'\n",
-    "    print '----------------------------------------'\n",
+    "    print 'Flight \\t  \\t Destination \\t  \\t Gate \\t  \\t Time'\n",
+    "    print '---------------------------------------------------------------'\n",
     "    for i in range(0,len(flights)):\n",
-    "        print '{:s} {:g} \\t {:s} \\t {:g} \\t {:g}'.format(sorted(flights)[i][0],\\\n",
+    "        print '{:s} {:g} \\t {:s}  \\t  \\t {:g} \\t  \\t {:g}'.format(sorted(flights)[i][0],\\\n",
     "                                                             sorted(flights)[i][1],\\\n",
     "                                                             airports[sorted(flights)[i][2]],\\\n",
     "                                                             sorted(flights)[i][3],\\\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -71,9 +71,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A M whale named Splash is born\n",
-      "A whale named Splash g\n",
-      "00:00:00\n"
+      "A whale named Splash 0:00:00\n",
+      "0:00:00\n"
      ]
     },
     {
@@ -82,7 +81,7 @@
        "'\\x07 \\x07 \\x07 \\x07 \\x07'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,17 +95,18 @@
     "        print 'A {:s} whale named {:s} is born'.format(sex, name)\n",
     "        self.name = name\n",
     "        self.sex = sex\n",
-    "        self.age = datetime.time()\n",
+    "        self.age = datetime.timedelta()\n",
     "    def sing(self):\n",
     "        return '\\a \\a \\a \\a \\a'\n",
     "    def __str__(self):\n",
-    "        return 'A whale named {:s} {:g}'.format(self.name, self.age)\n",
+    "        return 'A whale named {:s} {:s}'.format(self.name, self.age)\n",
     "    \n",
     "\n",
-    "w = Whale('Splash', 'M')\n",
+    "#w = Whale('Splash', 'M')\n",
     "\n",
     "print w\n",
     "#print w.name\n",
+    "\n",
     "print w.age\n",
     "w.sing()\n"
    ]
